# Human-Detection-and-Counting

./: .gitignore  Dockerfile  build.py  pyproject.toml  requirements.txt  setup.py
src/main/scripts/: Desktop.py  Prediction.py  Raspberry.py
